--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Pilot Muhammed</title>
     <meta content="" name="description" />
-    <meta content="" name="keywords" />
+    <meta content="" name="keywords" content="pilot,mohammed mahdi hadi, pilot mohammed, pilot muhammed,محمد مهدي هادي ,الطيار محمد , بايلوت محمد , الطيار محمد مهدي " />
 
     <!-- Favicons -->
     <link href="img/photo_1.jpg" rel="icon" />
