--- a/index.html
+++ b/index.html
@@ -245,6 +245,86 @@
             </div>
           </div>
         </div>
+
+        <!-- Part Lectures -->
+        <div class="container lec">
+          <div class="row">
+              <div class="col-md-3 col-sm-6">
+                  <div class="card">
+                      <div class="card-body">
+                          <h5 class="card-title">Ethical Hacking</h5>
+                          <p class="card-text">L 1 & 2</p>
+                          <a href="/files/L1 & 2-1.pdf" class="btn btn-primary">Open PDF</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <div class="card">
+                      <div class="card-body">
+                          <h5 class="card-title">Ethical Hacking</h5>
+                          <p class="card-text">L 3 & 4</p>
+                          <a href="/files/L3 & 4.pdf" class="btn btn-primary">Open PDF</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <div class="card">
+                      <div class="card-body">
+                          <h5 class="card-title">Ethical Hacking</h5>
+                          <p class="card-text">unavailable</p>
+                          <a href="#" class="btn btn-primary">Open PDF</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <div class="card">
+                      <div class="card-body">
+                          <h5 class="card-title">Ethical Hacking</h5>
+                          <p class="card-text">unavailable</p>
+                          <a href="#" class="btn btn-primary">Open PDF</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <div class="card">
+                      <div class="card-body">
+                          <h5 class="card-title">Ethical Hacking</h5>
+                          <p class="card-text">unavailable</p>
+                          <a href="#" class="btn btn-primary">Open PDF</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <div class="card">
+                      <div class="card-body">
+                          <h5 class="card-title">Ethical Hacking</h5>
+                          <p class="card-text">unavailable</p>
+                          <a href="#" class="btn btn-primary">Open PDF</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <div class="card">
+                      <div class="card-body">
+                          <h5 class="card-title">Ethical Hacking</h5>
+                          <p class="card-text">unavailable</p>
+                          <a href="#" class="btn btn-primary">Open PDF</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <div class="card">
+                      <div class="card-body">
+                          <h5 class="card-title">Ethical Hacking</h5>
+                          <p class="card-text">unavailable</p>
+                          <a href="#" class="btn btn-primary">Open PDF</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+
       </section>
       <!-- End courses Section -->
 
@@ -300,15 +380,15 @@
                 <p><em>Iraq · On-site</em></p>
                 <ul>
                   <li>
-                    Full Stack training from the IT-Live International
-                    Conference sponsored by MKnets Company , lasted for three
-                    months
+                    nternal training in Asiacell, which lasted for 30 days,
+                    on-site, and the training included a group of departments,
+                    including communications, information technology, marketing,
+                    and sales.
                   </li>
                 </ul>
                 <p>
-                  <b>Skills: </b> React.js · Node.js · MongoDB · Git · GitHub · Server
-                  Side · Databases · html html5 · css css3 · Bootstrap ·
-                  JavaScript
+                  <b>Skills: </b> IT Management · Telecommunications ·
+                  communication skills · Leadership · Teamwork
                 </p>
               </div>
 
@@ -319,15 +399,15 @@
                 <p><em>Iraq · On-site</em></p>
                 <ul>
                   <li>
-                    nternal training in Asiacell, which lasted for 30 days,
-                    on-site, and the training included a group of departments,
-                    including communications, information technology, marketing,
-                    and sales.
+                    Full Stack training from the IT-Live International
+                    Conference sponsored by MKnets Company , lasted for three
+                    months
                   </li>
                 </ul>
                 <p>
-                  <b>Skills: </b> IT Management · Telecommunications ·
-                  communication skills · Leadership · Teamwork
+                  <b>Skills: </b> React.js · Node.js · MongoDB · Git · GitHub · Server
+                  Side · Databases · html html5 · css css3 · Bootstrap ·
+                  JavaScript
                 </p>
               </div>
             </div>
