--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                   <div class="card">
                       <div class="card-body">
                           <h5 class="card-title">git & github</h5>
-                          <p class="card-text">L 3 & 4</p>
+                          <p class="card-text">unavailable</p>
                           <a href="/files/L3 & 4.pdf" class="btn btn-primary">Open </a>
                       </div>
                   </div>
