--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             data-aos-delay="100">
             <div class="icon-box iconbox-blue">
               <div class="icon">
-                <img src="/img/coruse_java.png" alt="" />
+                <img src="./img/coruse_java.png" alt="" />
               </div>
               <h4 style="margin-top: 80px">
                 <a
