Finesh fix all photo in courses

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           >
             <div class="icon-box iconbox-orange">
               <div class="icon">
-                <img src="/img/course_apps.png" alt="" />
+                <img src="./img/course_apps.png" alt="" />
               </div>
               <h4 style="margin-top: 80px">
                 <a
@@ -177,7 +177,7 @@
           >
             <div class="icon-box iconbox-pink">
               <div class="icon">
-                <img src="/img/course_asp.png" alt="" />
+                <img src="./img/course_asp.png" alt="" />
               </div>
               <h4 style="margin-top: 80px">
                 <a
@@ -197,7 +197,7 @@
           >
             <div class="icon-box iconbox-yellow">
               <div class="icon">
-                <img src="/img/coures_mikro.jpg" alt="" />
+                <img src="./img/coures_mikro.jpg" alt="" />
               </div>
               <h4 style="margin-top: 80px"><a href="">Mikro Tik</a></h4>
               <p style="width: 380px">
@@ -214,7 +214,7 @@
           >
             <div class="icon-box iconbox-red">
               <div class="icon">
-                <img src="/img/course_multimedia.jpg" alt="" />
+                <img src="./img/course_multimedia.jpg" alt="" />
               </div>
               <h4 style="margin-top: 80px">
                 <a href="">Multimedia Security</a>
@@ -233,7 +233,7 @@
           >
             <div class="icon-box iconbox-teal">
               <div class="icon">
-                <img src="/img/course_front.jpg" alt="" />
+                <img src="./img/course_front.jpg" alt="" />
               </div>
               <h4 style="margin-top: 80px">
                 <a href="">Front End Developer</a>
