Update Add main_photo to icon

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords" content="pilot,mohammed mahdi hadi, pilot mohammed, pilot muhammed,محمد مهدي هادي ,الطيار محمد , بايلوت محمد , الطيار محمد مهدي " />
 
     <!-- Favicons -->
-    <link href="img/photo_1.jpg" rel="icon" />
-    <link href="img/photo_1.jpg" rel="apple-touch-icon" />
+    <link href="img/main_photo.png" rel="icon" />
+    <link href="img/main.photo.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
